--- a/packages/sites/genomics-site/package.json
+++ b/packages/sites/genomics-site/package.json
@@ -10,6 +10,7 @@
     "@veupathdb/wdk-client": "^0.5.13",
     "@veupathdb/web-common": "^0.2.3",
     "ciena-dagre": "^1.0.0",
+    "core-js": "^3.21.1",
     "cytoscape": "3.2.9",
     "cytoscape-dagre": "^1.3.0",
     "cytoscape-panzoom": "^2.5.2",
