--- a/packages/sites/genomics-site/tsconfig.json
+++ b/packages/sites/genomics-site/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../install/base.tsconfig.json",
+  "extends": "@veupathdb/site-tsconfig/tsconfig.json",
   // "compilerOptions": {
   //   "baseUrl": ".",
   //   "paths": {
