--- a/packages/sites/genomics-site/package.json
+++ b/packages/sites/genomics-site/package.json
@@ -66,9 +66,9 @@
     "ify-loader": "^1.1.0",
     "jquery": "1.9.1",
     "mini-css-extract-plugin": "^0.6.0",
-    "node-sass": "^4.12.0",
     "popper.js": "^1.16.1",
     "react-spring": "^8.0.27",
+    "sass": "^1.52.2",
     "sass-loader": "^7.1.0",
     "script-loader": "^0.7.2",
     "source-map-loader": "^1.1.2",
