--- a/packages/sites/genomics-site/package.json
+++ b/packages/sites/genomics-site/package.json
@@ -69,6 +69,7 @@
     "mini-css-extract-plugin": "^0.6.0",
     "popper.js": "^1.16.1",
     "react-spring": "^8.0.27",
+    "relative-deps": "^1.0.7",
     "sass": "^1.52.2",
     "sass-loader": "^7.1.0",
     "script-loader": "^0.7.2",
@@ -80,5 +81,8 @@
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4",
     "webpack-merge": "^4.2.1"
+  },
+  "relativeDependencies": {
+    "@veupathdb/web-common": "../../EbrcWebsiteCommon/Client"
   }
 }
