--- a/packages/libs/blast-summary-view/package.json
+++ b/packages/libs/blast-summary-view/package.json
@@ -45,7 +45,7 @@
     "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.3.3",
     "@veupathdb/browserslist-config": "^1.0.0",
-    "@veupathdb/components": "^0.15.0",
+    "@veupathdb/components": "^0.16.6",
     "@veupathdb/coreui": "^0.16.0",
     "@veupathdb/eda": "^3.2.1",
     "@veupathdb/eslint-config": "^2.0.0",
@@ -54,8 +54,8 @@
     "@veupathdb/react-scripts": "^2.0.0",
     "@veupathdb/study-data-access": "^0.3.0",
     "@veupathdb/tsconfig": "^2.0.0",
-    "@veupathdb/wdk-client": "^0.6.7",
-    "@veupathdb/web-common": "^0.5.0",
+    "@veupathdb/wdk-client": "^0.8.2",
+    "@veupathdb/web-common": "^0.6.11",
     "assert": "^2.0.0",
     "autoprefixer": "^10.0.2",
     "bubleify": "^2.0.0",
@@ -66,6 +66,7 @@
     "ify-loader": "^1.1.0",
     "jquery": "1.9.1",
     "lint-staged": ">=10",
+    "notistack": "^1.0.10",
     "path-browserify": "^1.0.1",
     "popper.js": "^1.16.1",
     "postcss": "^8.1.0",
