--- a/packages/libs/blast-summary-view/package.json
+++ b/packages/libs/blast-summary-view/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "start": "veupathdb-react-scripts start",
-    "build": "veupathdb-react-scripts build",
+    "build": "veupathdb-react-scripts prepare",
     "test": "veupathdb-react-scripts test",
     "eject": "veupathdb-react-scripts eject",
     "compile": "veupathdb-react-scripts compile",
