--- a/packages/libs/blast-summary-view/package.json
+++ b/packages/libs/blast-summary-view/package.json
@@ -24,6 +24,11 @@
   "browserslist": [
     "extends @veupathdb/browserslist-config"
   ],
+  "peerDependencies": {
+    "@veupathdb/wdk-client": "^0.8.2",
+    "@veupathdb/web-common": "^0.6.11",
+    "react-redux": "^7.1.3"
+  },
   "devDependencies": {
     "@babel/core": "^7.16.0",
     "@babel/plugin-syntax-flow": "^7.14.5",
@@ -72,6 +77,7 @@
     "postcss": "^8.1.0",
     "prettier": "2.2.1",
     "querystring-es3": "^0.2.1",
+    "react-redux": "^7.1.3",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.3.0",
     "react-spring": "^8.0.27",
