--- a/packages/libs/blast-summary-view/package.json
+++ b/packages/libs/blast-summary-view/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "lodash": "^4.17.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.1"
@@ -27,7 +28,9 @@
   "peerDependencies": {
     "@veupathdb/wdk-client": "^0.8.2",
     "@veupathdb/web-common": "^0.6.11",
-    "react-redux": "^7.1.3"
+    "react-redux": "^7.1.3",
+    "redux-observable": "^1.2.0",
+    "rxjs": "^6.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
@@ -82,6 +85,8 @@
     "react-router-dom": "^5.3.0",
     "react-spring": "^8.0.27",
     "read": "^1.0.7",
+    "redux-observable": "^1.2.0",
+    "rxjs": "^6.2.2",
     "sass": "^1.49.0",
     "script-loader": "^0.7.2",
     "set-cookie-parser": "^2.4.6",
