--- a/packages/libs/blast-summary-view/package.json
+++ b/packages/libs/blast-summary-view/package.json
@@ -49,7 +49,7 @@
     "@testing-library/react": "12.1.2",
     "@testing-library/user-event": "13.5.0",
     "@types/node": "^14.0.0",
-    "@types/react": "^17.0.38",
+    "@types/react": "^17.0.47",
     "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.3.3",
     "@veupathdb/browserslist-config": "^1.0.0",
@@ -105,7 +105,8 @@
   "prettier": "@veupathdb/prettier-config",
   "resolutions": {
     "@veupathdb/**/react": "17",
-    "@veupathdb/**/react-dom": "17"
+    "@veupathdb/**/react-dom": "17",
+    "@types/react": "17"
   },
   "volta": {
     "node": "16.14.1",
