--- a/packages/libs/blast-summary-view/package.json
+++ b/packages/libs/blast-summary-view/package.json
@@ -3,10 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "lodash": "^4.17.5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "5.0.1"
+    "lodash": "^4.17.5"
   },
   "scripts": {
     "start": "veupathdb-react-scripts start",
@@ -28,6 +25,8 @@
   "peerDependencies": {
     "@veupathdb/wdk-client": "^0.8.2",
     "@veupathdb/web-common": "^0.6.11",
+    "react": "^16.14.0 || ^17.0.2",
+    "react-dom": "^16.14.0 || ^17.0.2",
     "react-redux": "^7.1.3",
     "redux-observable": "^1.2.0",
     "rxjs": "^6.2.2"
@@ -80,9 +79,12 @@
     "postcss": "^8.1.0",
     "prettier": "2.2.1",
     "querystring-es3": "^0.2.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-redux": "^7.1.3",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.3.0",
+    "react-scripts": "5.0.1",
     "react-spring": "^8.0.27",
     "read": "^1.0.7",
     "redux-observable": "^1.2.0",
