--- a/packages/libs/blast-summary-view/package.json
+++ b/packages/libs/blast-summary-view/package.json
@@ -28,6 +28,7 @@
     "react": "^16.14.0 || ^17.0.2",
     "react-dom": "^16.14.0 || ^17.0.2",
     "react-redux": "^7.1.3",
+    "redux": "^4.0.0",
     "redux-observable": "^1.2.0",
     "rxjs": "^6.2.2"
   },
@@ -50,6 +51,7 @@
     "@types/node": "^14.0.0",
     "@types/react": "^17.0.47",
     "@types/react-dom": "^17.0.11",
+    "@types/react-redux": "^7.1.20",
     "@types/react-router-dom": "^5.3.3",
     "@veupathdb/browserslist-config": "^1.0.0",
     "@veupathdb/components": "^0.16.6",
@@ -87,6 +89,7 @@
     "react-scripts": "5.0.1",
     "react-spring": "^8.0.27",
     "read": "^1.0.7",
+    "redux": "^4.0.0",
     "redux-observable": "^1.2.0",
     "rxjs": "^6.2.2",
     "sass": "^1.49.0",
