--- a/packages/libs/blast-summary-view/package.json
+++ b/packages/libs/blast-summary-view/package.json
@@ -1,7 +1,17 @@
 {
-  "name": "web-blast-summary-view",
+  "name": "@veupathdb/blast-summary-view",
   "version": "0.1.0",
-  "private": true,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/VEuPathDB/web-blast-summary-view.git"
+  },
+  "sideEffects": [
+    "src/globals.js"
+  ],
+  "files": [
+    "lib",
+    "src/lib"
+  ],
   "dependencies": {
     "lodash": "^4.17.5"
   },
