--- a/packages/libs/blast-summary-view/package.json
+++ b/packages/libs/blast-summary-view/package.json
@@ -33,10 +33,10 @@
     "extends @veupathdb/browserslist-config"
   ],
   "peerDependencies": {
-    "@veupathdb/wdk-client": "^0.8.2",
-    "@veupathdb/web-common": "^0.6.11",
-    "react": "^16.14.0 || ^17.0.2",
-    "react-dom": "^16.14.0 || ^17.0.2",
+    "@veupathdb/wdk-client": ">=0.8.2",
+    "@veupathdb/web-common": ">=0.6.11",
+    "react": "^16.14.0 || >=17.0.2",
+    "react-dom": "^16.14.0 || >=17.0.2",
     "react-redux": "^7.1.3",
     "redux": "^4.0.0",
     "redux-observable": "^1.2.0",
