--- a/packages/sites/genomics-site/.env.sample
+++ b/packages/sites/genomics-site/.env.sample
@@ -12,6 +12,9 @@ WDK_SERVICE_URL=${LEGACY_WEB_APP_URL}/service
 CGI_BIN_ENDPOINT=/cgi-bin
 CGI_BIN_URL=${BASE_PROXY_URL}/cgi-bin
 
+DATAPLOTTER_ENDPOINT=/dataPlotter
+DATAPLOTTER_URL=${BASE_PROXY_URL}/dataPlotter
+
 SITE_SEARCH_SERVICE_ENDPOINT=/site-search
 SITE_SEARCH_SERVICE_URL=${BASE_PROXY_URL}/site-search
 
