--- a/packages/sites/genomics-site/.env.sample
+++ b/packages/sites/genomics-site/.env.sample
@@ -15,6 +15,12 @@ CGI_BIN_URL=${BASE_PROXY_URL}/cgi-bin
 DATAPLOTTER_ENDPOINT=/dataPlotter
 DATAPLOTTER_URL=${BASE_PROXY_URL}/dataPlotter
 
+EDA_ENABLED=false
+EDA_SERVICE_ENDPOINT=/eda
+EDA_SERVICE_URL=${BASE_PROXY_URL}/eda
+EDA_EXAMPLE_ANALYSES_AUTHOR=854899613
+EDA_SINGLE_APP_MODE=pass
+
 SITE_SEARCH_SERVICE_ENDPOINT=/site-search
 SITE_SEARCH_SERVICE_URL=${BASE_PROXY_URL}/site-search
 
