--- a/packages/sites/genomics-site/package.json
+++ b/packages/sites/genomics-site/package.json
@@ -17,14 +17,14 @@
     "@types/cytoscape": "3.2.9",
     "@veupathdb/blast-summary-view": "^0.1.0",
     "@veupathdb/components": "^0.19.2",
-    "@veupathdb/coreui": "^0.18.6",
-    "@veupathdb/eda": "^3.10.2",
+    "@veupathdb/coreui": "^0.18.7",
+    "@veupathdb/eda": "^3.10.6",
     "@veupathdb/http-utils": "^1.1.0",
     "@veupathdb/multi-blast": "^3.0.2",
     "@veupathdb/preferred-organisms": "^1.1.11",
     "@veupathdb/study-data-access": "^0.3.6",
-    "@veupathdb/user-datasets": "0.1.12",
-    "@veupathdb/wdk-client": "^0.9.13",
+    "@veupathdb/user-datasets": "^0.1.12",
+    "@veupathdb/wdk-client": "^0.9.14",
     "@veupathdb/web-common": "^0.6.24",
     "ciena-dagre": "^1.0.0",
     "core-js": "^3.21.1",
