--- a/packages/sites/genomics-site/package.json
+++ b/packages/sites/genomics-site/package.json
@@ -14,7 +14,7 @@
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.61",
-    "@types/cytoscape": "3.2.9",
+    "@types/cytoscape": "^3.14.7",
     "@veupathdb/blast-summary-view": "^0.1.0",
     "@veupathdb/components": "^0.19.12",
     "@veupathdb/coreui": "^0.18.17",
@@ -28,7 +28,7 @@
     "@veupathdb/web-common": "^0.7.5",
     "ciena-dagre": "^1.0.0",
     "core-js": "^3.21.1",
-    "cytoscape": "3.2.9",
+    "cytoscape": "^3.15.2",
     "cytoscape-dagre": "^1.3.0",
     "cytoscape-panzoom": "^2.5.2",
     "js-cookie": "^2.2.0",
